# bxNodeEditor

./: .gitmodules  CMakeLists.txt  README.md  addon.json  bxNodeEditor.cpp  bxNodeEditor.h
examples/: CMakeLists.txt
examples/example_editor/: CMakeLists.txt  addons.cmake  app.h  main.cpp
ui/windows/: NodeEditorWindow.cpp  NodeEditorWindow.h
windows/: NodeEditorWindow.cpp  NodeEditorWindow.h
